--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: SupplyChain DataScience 
+title: Supply Chain Data Science 
 description: This blogs contains articles on using data science in supply chain for data driven decisions.
 github_username: Munikumarnm
 # you can comment the below line out if your repo name is not different than your baseurl
@@ -14,7 +14,7 @@ github_repo: "Supply-Chain-Data-Sciecnce"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
-url: "https://SupplyChainDataScience" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://SupplyChainDataScience.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
@@ -34,7 +34,7 @@ url: "https://SupplyChainDataScience" # the base hostname & protocol for your si
 #
 # 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
 #
-baseurl: "/Supply-Chain-Data-Sciecnce" # the subpath of your site, e.g. "/blog".
+baseurl: "/SupplyChainDataSciecnce" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
